--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
+
 {
+  "scripts": {
+  "start": "node server.js",
+  "dev": "nodemon server.js"
+  },
+
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
@@ -12,4 +18,5 @@
     "nodemailer": "^7.0.9",
     "socket.io": "^4.8.1"
   }
+  
 }
